content overflow fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,8 @@
 
 .result__video {
     object-fit: cover;
-    width: 100%;
+    object-position: center;
+    width: 100%;    
     height: 100%;
 }
 
@@ -61,6 +62,7 @@
 }
 
 .search-form__textfield {
+    appearance: none;
     font-size: inherit;
     font-weight: inherit;
     color: white;
@@ -73,7 +75,7 @@
     border-top: 1px solid white;
 }
 
-search-form__textfield:active {
+.search-form__textfield:active {
     border-right: 1px solid white ;
     border-left: 1px solid white;
 }
@@ -146,6 +148,7 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox {
 
 .button:hover {
     cursor: pointer;
+    text-decoration: underline;
 }
 
 .button:active {
@@ -155,6 +158,10 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox {
 .button:focus {
     outline: 1px solid white;
     outline-offset: 1px;
+}
+
+.more-button {
+    width: 100%;
 }
 
 .search-form__submit-button {
@@ -181,7 +188,7 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox {
 }
 
 .content__details{
-    width: 394px;
+    width: 399px;
 }
 
 .content__list {
@@ -190,7 +197,7 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox {
     width: 100%;
     height: 298px;
     margin-top: 22px;
-    overflow-y: scroll;
+    overflow-y: auto;
     scrollbar-width: thin;
 }
 
@@ -206,6 +213,10 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox {
 .content__card-link {
     text-decoration: none;
     color: white
+}
+
+.content__card-link:focus {
+    outline: none;
 }
 
 .content__video-card {
@@ -237,12 +248,18 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox {
     font-size: 30px;
     font-weight: 700;
     text-transform: uppercase;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .content__video-card-description {
     font-family: 'Fira Sans Condensed', sans-serif;
     font-size: 18px;
     font-weight: 400;
+    height: 65px;
+    width: 100%;
+    overflow: auto;
 }
 
 .content__video-card:hover .content__video-card-title,
